matomo/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: matomo
    labels:
        app: matomo
spec:
    type: NodePort
    ports:
        - name: matomo
          port: 80
          targetPort: 80
    selector:
        app: matomo
